# rope_in_c

./: .gitignore  CMakeLists.txt  bench.c
.github/workflows/: c-cpp.yml
app/: bench.c
src/: CMakeLists.txt  bench.c  perso_string.c  perso_string.h  rope.c  rope.h
test/: perso_string_tests.c  perso_string_tests.h  rope_tests.c  rope_tests.h  tests_master.c
tests/: CMakeLists.txt  rope_tests.c
